# midas

./: .gitignore  Makefile  README.md  pyproject.toml
packaging/: install.sh
packaging/deb/: build-deb.sh
src/midas/: __init__.py  agent.py  cli.py  config.py  cron.py  disk.py  gitops.py  integrate.py  jira_agent_fallback.py  jira_rest.py  logging_setup.py  notify.py  paths.py  pipeline.py  poller.py  preflight.py  report.py  state.py  testrun.py  usage.py  worktime.py
src/midas/detect/: __init__.py  llm.py  repo.py  text.py
src/midas/docs/: NOTIFICATIONS.md  TOKEN_OPTIMIZATION.md  USAGE.md
src/midas/hooks/: midas-usage-hook.py
src/midas/skills/midas-env-detect/: SKILL.md
src/midas/skills/midas-implement/: SKILL.md
src/midas/skills/midas-jira-fallback/: SKILL.md
src/midas/skills/midas-qa-validation/: SKILL.md
src/midas/skills/midas-task-spec/: SKILL.md
src/midas/skills/midas-test-plan/: SKILL.md
src/midas/skills/midas-triage/: SKILL.md
src/midas/skills/midas-validation-commit-enonic/: SKILL.md
src/midas/skills/midas-validation-commit-generic/: SKILL.md
tests/: conftest.py  test_agent_env.py  test_config.py  test_detect_repo.py  test_detect_text.py  test_disk.py  test_integrate.py  test_jira_rest.py  test_notify.py  test_pipeline_comments.py  test_pipeline_dryrun.py  test_pipeline_lock.py  test_poller.py  test_preflight_integrity.py  test_rework.py  test_state.py  test_usage.py  test_worktime.py
tests/fixtures/: FAKE-1.md
